<resources>
    <!-- APP名称 -->
    <string name="app_name">xmarket</string>

    <!-- 公共 -->
    <string name="choose">选择</string>

    <!-- 主页面的bottom menu -->
    <string name="MainActivity_title_school">本校</string>
    <string name="MainActivity_title_sort">分类</string>
    <string name="MainActivity_title_team">志愿队</string>
    <string name="MainActivity_title_message">消息</string>
    <!-- 主页面的侧栏 -->
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <!-- 登录页面  -->
    <string name="loginTitle">登录</string>
    <string name="loginHint">用户名</string>
    <string name="loginPasswordHint">密码</string>
    <string name="loginActionText">GO</string>
    <string name="dialog_wait">请稍等</string>
    <string name="login_dialog_content">正在登录...</string>

    <!-- 注册页面  -->
    <string name="registerHint">用户名</string>
    <string name="registerPasswordHint">密码</string>
    <string name="registerRepeatPasswordHint">重复密码</string>
    <string name="registerTitle">加入我们</string>
    <string name="registerActionText">下一步</string>
    <string name="register_dialog_content">正在注册...</string>
    <string name="register_next_action">注册</string>
    <string name="register_next_school">点击设置学校</string>
    <string name="register_next_phone">手机号</string>
    <string name="register_next_school_choose">请选择学校</string>

    <!-- 个人信息页面  -->
    <string name="info_username">jcala</string>
    <string name="info_school">电子科技大学(沙河校区)</string>
    <string name="info_sell">待售</string>
    <string name="info_bought">已买</string>
    <string name="info_sold">已售</string>
    <string name="info_uncomplete">待确认</string>
    <string name="info_donation">捐赠</string>
    <string name="info_team">志愿队</string>
    <string name="info_others">其他</string>
    <string name="info_author">关于作者</string>
    <string name="info_logout">退出登录</string>

    <!--添加商品页面-->
    <string name="trade_add_title">标题</string>
    <string name="trade_add_desp">描述</string>
    <string name="trade_add_price">价格(元)</string>
    <string name="trade_add_tag">点击设置分类</string>
    <string name="trade_add_photo">点击上传图片</string>
    <string name="trade_add_submit">提交</string>
    <string name="trade_add_action_title">发布</string>
    <string name="trade_add_dialog_content">正在发布...</string>

    <!--消息页面-->
    <string name="message_status_sell">收到购买请求，点击确认交易</string>
    <string name="message_status_buy">卖家已确认，点击发送短信</string>
    <string name="message_dialog_title">确认交易？</string>
    <string name="message_dialog_content">确认之后，对方将看到你的手机号</string>
    <string name="message_dialog_agree">确认</string>
    <string name="message_dialog_disagree">返回</string>

    <!--商品页面-->
    <string name="trade_detail_button">我要购买</string>

    <!--用户志愿队页面-->
    <string name="user_team_title">我的志愿队</string>

    <!--添加志愿队页面-->
    <string name="team_add_title">添加志愿队</string>
    <string name="team_add_name">志愿队名称</string>
    <string name="team_add_description">志愿队描述</string>
    <string name="team_add_img">点击设置志愿队封面</string>
    <string name="team_add_id">点击上传学生证照片</string>
    <!--商品细节页面-->
    <string name="trade_detail_dialog_title">确认购买?</string>
    <string name="trade_detail_dialog_content">确认之后，对方将收到你的购买请求</string>
    <string name="trade_detail_dialog_agree">确认</string>
    <string name="trade_detail_dialog_disagree">返回</string>
    <string name="trade_detail_team_choose">请选择要捐赠给的志愿队</string>
    <!--用户商品列表页面-->
    <string name="user_trade_dialog_content">正在加载数据...</string>



</resources>

