<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_next_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:errorTextAppearance="@style/MaterialLoginTheme.TextAppearanceLoginError"
        app:theme="@style/MaterialLoginTheme.TextAppearanceLogin">

        <AutoCompleteTextView
            android:id="@+id/register_next_phone_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_next_phone"
            android:inputType="phone"
            android:maxLength="20"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/register_next_school"
            style="@style/MaterialLoginTheme.SelectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register_next_school"
            android:textColor="@color/material_login_register_color"
            android:textSize="20sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_back">

        <TextView
            android:id="@+id/register_next_sub"
            style="@style/MaterialLoginTheme.SelectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/register_next_action"
            android:textColor="@color/material_login_register_color"
            android:textSize="20sp" />
    </FrameLayout>
</LinearLayout>
