<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
        android:id="@+id/trade_add_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".mvp.trade.add.TradeAddActivity"
        tools:showIn="@layout/trade_add_activity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small"
        android:background="@color/white"
        android:paddingBottom="@dimen/spacing_small"
        android:paddingTop="@dimen/spacing_small"
        android:elevation="@dimen/trade_add_card_elevation"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large">

            <AutoCompleteTextView
                android:id="@+id/trade_add_title_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trade_add_title"
                android:inputType="text"
                android:maxLength="30"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large">

            <AutoCompleteTextView
                android:id="@+id/trade_add_price_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trade_add_price"
                android:maxLines="1"
                android:maxLength="8"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginLeft="@dimen/spacing_large">

            <AutoCompleteTextView
                android:id="@+id/trade_add_desp_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:maxLines="4"
                android:maxLength="128"
                android:hint="@string/trade_add_desp"
                android:inputType="textMultiLine"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/trade_add_tag_select"
            style="@style/MaterialLoginTheme.SelectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/trade_add_tag"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </LinearLayout>

    <View
       android:layout_height="@dimen/line_divider_height"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/spacing_small"
        android:background="@color/gray_light"/>


        <me.jcala.xmarket.view.ScrollGridView
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:id="@+id/trade_add_pics_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="2dp"
            android:scrollbars="none"
            android:horizontalSpacing="2dp"
            android:numColumns="4"
            />
</LinearLayout>

</ScrollView>